polars-jsonschema-bridge/tests/snapshots/readme_example__readme_custom_schema.snap
---
source: polars-jsonschema-bridge/tests/readme_example.rs
expression: json_schema_custom
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: User Schema
type: object
properties:
  name:
    type: string
  age:
    type: integer
  scores:
    type: array
    items:
      type: number
required:
  - age
  - name
additionalProperties: false
