polars-jsonschema-bridge/tests/snapshots/readme_example__readme_json_to_polars.snap
---
source: polars-jsonschema-bridge/tests/readme_example.rs
expression: fields_vec
---
- - name
  - String
- - age
  - Int64
- - scores
  - "List[Float64]"
- - profile
  - "Struct[active:Boolean]"
