polars-jsonschema-bridge/tests/snapshots/readme_example__readme_options_example.snap
---
source: polars-jsonschema-bridge/tests/readme_example.rs
expression: json_schema
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: Example
type: object
properties:
  name:
    type: string
  email:
    type: string
  age:
    type: integer
required:
  - age
  - name
additionalProperties: false
